zsdx-1.2 (2011-12-21)

* Dungeon 9: fix a crash with two enemies that appear on a platform
* Attempt to fix a crash with mummies by removing a useless and buggy feature
* Dungeon 10: let hero to go back from the roof after killing the boss
* Dungeon 6: it was possible to bypass a part of the dungeon
* Dungeon 1: fix the fixed minillosaur eggs
* Small map improvements

zsdx-1.1 (2011-12-19)

* Fix a crash when jumping from grass into a hole
* Fix a possible crash when buying potions
* Fix a memory leak with shop items
* Dungeon 9: two doors were traversable
* Dungeon 3: the boss could become inactive after a while
* Dungeon 7: some flames of the boss stayed fixed
* Adjust the difficulty of some bosses
* West mountains cave: the hero could be stuck after falling
* Dungeon 8: open a door
* Dungeon 8 minimap: remove an unexisting door
* Minor map improvements
* Update copyright info

zsdx-1.0 (2011-12-16)

* Initial release of Zelda Mystery of Solarus DX

-------------------------------------------------------------------------------

zsxd-1.4 (under development)

* Fix a duplicate heart container

zsxd-1.3 (2011-08-12)

* Add the English translation
* Fix a precision bug with sensors

zsxd-1.2 (2011-04-23)

* Fix a Windows issue with mono sound effects

zsxd-1.1 (2011-04-02)

* Use libvorbisfile instead of libsndfile for sound effects
* Replace the last sword by a new rupee bag
* Various minor improvements

zsxd-1.0 (2011-04-01)

* Initial release of Zelda Mystery of Solarus XD
