@@ -1,3 +1,10 @@
+zsdx-1.3 (under development)
+
+* Dungeon 7: fix a possible crash with statues and pikes
+* Make sure swords are obtained in the correct order
+* Don't play the sound of pikes too frequently when they don't have much space
+* After the boss of dungeon 10, re-enable enemies of the map
+
 zsdx-1.2 (2011-12-21)
 
 * Dungeon 9: fix a crash with two enemies that appear on a platform
